feat(donaciones): adaptar difusión según tipo de paquete
`DonateBroadcastCommand` ahora envía mensajes diferentes según el tipo de paquete y la configuración, con soporte para diferentes rangos